--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       const user = 'ranjithdss15';
 
       // Generate token here: https://github.com/settings/tokens
-      const token = '194bd3e4775e6f3946726a770f2a10acf151ad3c';
+      const token = '';
       const endpoint = 'https://api.github.com';
 
       const creds = `${user}:${token}`;
